# nlp_intro

./: pyproject.toml
src/: nltk1_intro.ipynb  nltk2_gutenberg.ipynb  nltk3_brown.ipynb  nltk4_words.ipynb  nltk5_names.ipynb  nltk6_wordnet.ipynb  nltk7_beautifulsoup.ipynb
