[tool.poetry]
name = "intro_to_nlp_1"
description = "Intro To NLP Part 1"
version = "0.1.0"
authors = [
    "Cillian"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "3.8.1"
matplotlib = "^3.7.2"
bs4 = "^0.0.1"
